oppdatert openapi for tp ordningen
