# app/main/openapi.yaml
@@ -111,6 +111,49 @@ paths:
           description: Manglende URL / Person ikke funnet
         '500':
           description: Feil på tjeneste, meld fra og send med call-id
+  /tp-samhandling:
+    post:
+      summary: Hent invilget vedtak og alle tilhørende utbetalinger for en person
+      tags:
+        - tp
+      description: |-
+        Hent invilget vedtak og alle tilhørende utbetalinger for en person.
+
+        Scope: `nav:aap:tpordningen.read`
+        
+        Dette endepunktet er kun tilgjengelig for NAV på tidspunktet. Konsumenter vil bli lagt til i scope etterhvert som de blir klare.
+      security:
+        - maskinporten: [ ]
+      parameters:
+        - in: header
+          name: x-callid
+          description: En UUID konsumenten sender inn som brukes til videre logging og feilsøking.
+          schema:
+            type: string
+            format: uuid
+          required: true
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PeriodeRequest'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MaksimumRespons'
+        '400':
+          description: Feil i request
+        '401':
+          description: Mangler / feil maskinporten token eller samtykke-token
+        '403':
+          description: Feil scope i maskinporten token
+        '404':
+          description: Manglende URL / Person ikke funnet
+        '500':
+          description: Feil på tjeneste, meld fra og send med call-id
 components:
   schemas:
     PeriodeResponse:
@@ -135,6 +178,86 @@ components:
           nullable: true
           description: Til dato for perioden
           example: 2021-01-31
+    MaksimumRespons:
+      type: array
+      description: liste
+      items:
+        $ref: '#/components/schemas/Vedtak'
+
+    Reduksjon:
+        type: object
+        properties:
+          timerArbeidet:
+            type: number
+            description: Kode for utbetalingsgrad
+            example: 23.5
+          annenReduksjon:
+            $ref: '#/components/schemas/AnnenReduksjon'
+    AnnenReduksjon:
+      type: object
+      properties:
+        sykedager:
+          type: number
+          description: Antall sykedager
+          example: 23
+        sentMeldekort:
+          type: boolean
+          description: Var utbetalingens koblede meldekort sendt sent?
+          example: false
+        fraver:
+            type: number
+            description: Antall fraværstimer
+            example: 2
+    UtbetalingMedMer:
+      type: object
+      properties:
+        periode:
+          $ref: '#/components/schemas/Periode'
+        reduksjon:
+          $ref: '#/components/schemas/Reduksjon'
+        belop:
+          type: number
+          description: Utbetalingsbeløp
+          example: 1234.56
+        dagsats:
+          type: number
+          description: Dagsats for utbetalingen
+          example: 123.45
+        barnetilegg:
+          type: number
+          description: Barnetillegg for utbetalingen
+          example: 123.45
+    Vedtak:
+      type: object
+      properties:
+        utbetalinger:
+          type: array
+          description: Utbetalinger for vedtaket
+          items:
+            $ref: '#/components/schemas/UtbetalingMedMer'
+        dagsats:
+          type: number
+          description: Dagsats for vedtaket
+          example: 123.45
+        status:
+          type: string
+          description: Status for vedtaket
+          example: "Innvilget"
+        saksnummer:
+          type: string
+          description: Saksnummer for vedtaket
+          example: "123456789"
+        vedtaksdato:
+          type: string
+          format: date
+          description: Dato for vedtaket
+          example: 2021-01-01
+        periode:
+          $ref: '#/components/schemas/Periode'
+        rettighetsTyoe:
+          type: string
+          description: Rettighetstype for vedtaket
+          example: "AAP"
     PeriodeRequest:
       type: object
       properties:
